sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:14: error: Unmatched closing brace '}' ignored here
           }
           ^